<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/loginScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/img_desc"
            android:src="@drawable/logo_1" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="110dp"
            android:background="@drawable/login_edit_field_bg"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:hint="@string/login_page_user_hint"
            android:padding="10dp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="40dp"
            android:inputType="textPassword"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edit_field_bg"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock_gray_24dp"
            android:hint="@string/login_page_pass_hint"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_btn_field_bg"
            android:text="@string/login_page_btn"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>
</FrameLayout>