<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/progress_text"
        android:textColor="@android:color/white" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone">

        <LinearLayout
            android:id="@+id/serversArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#aaa"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/logo_2" />

                <ImageView
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/img_desc"
                    android:src="@drawable/ic_exit_to_app_black_24dp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="16dp">

                <TextView
                    android:id="@+id/serverName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:text="@string/title_server"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:text="@string/title_distance"
                    android:textAllCaps="true" />
            </FrameLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvServers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#eee" />
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</FrameLayout>